# smacros

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
